актуальная ссылка на телеграм

--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
             <p class="organizer-name">Олег Соболев</p>
             <p class="organizer-contacts">
                 <a href="tel:+79171214470" class="organizer-link">+7 (917) 121 44 70</a><br>
-                <a href="https://t.me/placeholder" class="organizer-link" target="_blank" rel="noopener">Telegram:
-                    @placeholder</a>
+                <a href="https://t.me/helgitheseer" class="organizer-link" target="_blank" rel="noopener">Telegram:
+                    @helgitheseer/a>
             </p>
         </div>
 
