актуальная ссылка на телеграм

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <p class="organizer-contacts">
                 <a href="tel:+79171214470" class="organizer-link">+7 (917) 121 44 70</a><br>
                 <a href="https://t.me/helgitheseer" class="organizer-link" target="_blank" rel="noopener">Telegram:
-                    @helgitheseer/a>
+                    @helgitheseer</a>
             </p>
         </div>
 
