--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <div class="envelope-paper" aria-hidden="true"></div>
         <div class="envelope-block">
             <div class="envelope" id="envelope" role="button" tabindex="0" aria-label="Открыть приглашение">
-                <img src="assets/ChatGPT Image 31 янв. 2026 г., 21_53_04.png" alt="Приглашение" class="envelope-img">
+                <img src="assets/envelope.png" alt="Приглашение" class="envelope-img">
             </div>
             <p class="envelope-hint">Для просмотра нажмите на конверт</p>
         </div>
     </div>
 
     <audio id="wedding-music" loop preload="auto">
-        <source src="Nat_King_Cole_-_L-O-V-E_(Multilingual_Version.mp3" type="audio/mpeg">
+        <source src="assets/Nat%20King%20Cole%20-%20L-O-V-E.mp3" type="audio/mpeg">
     </audio>
 
     <button type="button" class="music-toggle" id="music-toggle" aria-label="Включить или выключить музыку"
@@ -214,7 +214,7 @@
             <div class="faq-item">
                 <div class="faq-number">01</div>
                 <p class="faq-text">
-                    Мы создали телеграмм канал для гостей, будем рады видеть там ваши фото и видео. присоединяйтесь!
+                    Мы создали телеграмм канал для гостей, будем рады видеть там ваши фото и видео. <a class="organizer-link" href="https://t.me/+veIVLmKk-DM0OWZi">присоединяйтесь!</a>
                 </p>
             </div>
             <div class="faq-item">
