--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="faq-item">
                 <div class="faq-number">01</div>
                 <p class="faq-text">
-                    Мы создали телеграмм канал для гостей, будем рады видеть там ваши фото и видео. <a class="organizer-link" href="https://t.me/+veIVLmKk-DM0OWZi">присоединяйтесь!</a>
+                    Мы создали телеграмм канал для гостей, будем рады видеть там ваши фото и видео. <a style="font-weight: 600" class="organizer-link" href="https://t.me/+veIVLmKk-DM0OWZi">присоединяйтесь!</a>
                 </p>
             </div>
             <div class="faq-item">
